--- a/githubclone.html
+++ b/githubclone.html
@@ -6,7 +6,7 @@
     <title>GitHub Repositories</title>
     <link rel="stylesheet" href="style1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/svg+xml" href="github-logo.svg">
+    <link rel="icon" type="image/svg+xml" href="github.svg">
 </head>
 <body>
 
